[package]
name = "aliasman-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
dirs = "6"
rand = "0.9"
regex = "1"
rackspace-email = { git = "https://github.com/patsoffice/rackspace-email-rs" }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3"
