[package]
name = "aliasman-web"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "aliasman-web"
path = "src/main.rs"

[dependencies]
aliasman-core = { path = "../aliasman-core" }
anyhow = "1"
askama = "0.12"
async-trait = "0.1"
axum = "0.8"
axum-extra = { version = "0.12.5", features = ["cookie"] }
clap = { version = "4", features = ["derive", "env"] }
mime_guess = "2"
regex = "1"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
